--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.1.3",
+    "@angular/cli": "1.6.3",
     "@angular/common": "^5.1.3",
     "@angular/compiler": "^5.1.3",
+    "@angular/compiler-cli": "^5.1.3",
     "@angular/core": "^5.1.3",
     "@angular/forms": "^5.1.3",
     "@angular/http": "^5.1.3",
@@ -22,12 +25,12 @@
     "@angular/platform-browser-dynamic": "^5.1.3",
     "@angular/router": "^5.1.3",
     "core-js": "^2.5.3",
+    "express": "^4.16.2",
     "rxjs": "^5.5.6",
+    "typescript": "~2.4.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
-    "@angular/compiler-cli": "^5.1.3",
     "@angular/language-service": "^5.1.3",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -43,7 +46,10 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "tslint": "~5.7.0"
+  },
+  "engines": {
+    "node": "8.9.1",
+    "npm": "5.5.1"
   }
 }
